{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 87,
  "lineage": "4f4ccfbf-9efb-ebfa-dd10-f9c8b45a37fd",
  "resources": [
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:243429551092:subnet/subnet-04f73860e882c82a3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "available_ip_address_count": 4091,
            "cidr_block": "172.31.32.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04f73860e882c82a3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "243429551092",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "vpc_id": "vpc-07296eacbb623d508"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "default_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:243429551092:subnet/subnet-05ec884077f9555df",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "available_ip_address_count": 4091,
            "cidr_block": "172.31.0.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05ec884077f9555df",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "243429551092",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "vpc_id": "vpc-07296eacbb623d508"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:243429551092:vpc/vpc-07296eacbb623d508",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0b360862455a68ec5",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-094ed2f3f5165e068",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07296eacbb623d508",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-05711217f26d4bbdf",
            "owner_id": "243429551092"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b19a31e026b3fcfd",
            "arn": "arn:aws:ec2:us-east-1:243429551092:elastic-ip/eipalloc-0b19a31e026b3fcfd",
            "association_id": "eipassoc-01fdec01d9d5465f6",
            "domain": "vpc",
            "id": "eipalloc-0b19a31e026b3fcfd",
            "instance": "i-0a84147a29fef2f37",
            "network_border_group": "us-east-1",
            "network_interface": "eni-07a2c0ecc8b58761f",
            "private_dns": "ip-10-0-1-169.ec2.internal",
            "private_ip": "10.0.1.169",
            "public_dns": "ec2-3-226-212-159.compute-1.amazonaws.com",
            "public_ip": "3.226.212.159",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "ducktickets-eip-hml"
            },
            "tags_all": {
              "Name": "ducktickets-eip-hml"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c02fb55956c7d316",
            "arn": "arn:aws:ec2:us-east-1:243429551092:instance/i-00a29cd5d578d6af2",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ducktickets-ec2-profile",
            "id": "i-00a29cd5d578d6af2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0cf55c4cccb43d401",
            "private_dns": "ip-10-0-1-145.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.145",
            "public_dns": "ec2-54-145-186-67.compute-1.amazonaws.com",
            "public_ip": "54.145.186.67",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-1:243429551092:key/a90e6fd1-564f-4bfd-b1f2-c85fe35d9b6c",
                "throughput": 125,
                "volume_id": "vol-0caa2d085b147ed7a",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03fd9f537e673ff65",
            "tags": {
              "Name": "ducktickets-ec2-hml"
            },
            "tags_all": {
              "Name": "ducktickets-ec2-hml"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a455cb2ded70807a"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "dependencies": [
            "aws_db_instance.main",
            "aws_iam_instance_profile.ec2_profile",
            "aws_s3_bucket.storage",
            "aws_security_group.ec2",
            "aws_sqs_queue.main",
            "aws_subnet.public",
            "random_password.db_password",
            "random_password.secret_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:243429551092:internet-gateway/igw-069d26d90f654f1b1",
            "id": "igw-069d26d90f654f1b1",
            "owner_id": "243429551092",
            "tags": {
              "Name": "ducktickets-igw-hml"
            },
            "tags_all": {
              "Name": "ducktickets-igw-hml"
            },
            "vpc_id": "vpc-09cc347e23e147f00"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:243429551092:route-table/rtb-046a325f49cb78fca",
            "id": "rtb-046a325f49cb78fca",
            "owner_id": "243429551092",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-069d26d90f654f1b1",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ducktickets-public-rt-hml"
            },
            "tags_all": {
              "Name": "ducktickets-public-rt-hml"
            },
            "timeouts": null,
            "vpc_id": "vpc-09cc347e23e147f00"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-031cf28b84dec8f66",
            "route_table_id": "rtb-046a325f49cb78fca",
            "subnet_id": "subnet-03fd9f537e673ff65"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:243429551092:security-group/sg-0a455cb2ded70807a",
            "description": "Security group for DuckTickets EC2",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a455cb2ded70807a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ducktickets-ec2-hml-20250818121059340300000002",
            "name_prefix": "ducktickets-ec2-hml-",
            "owner_id": "243429551092",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ducktickets-ec2-hml-sg"
            },
            "tags_all": {
              "Name": "ducktickets-ec2-hml-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-09cc347e23e147f00"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:243429551092:security-group/sg-07168fa93ae7ed84a",
            "description": "Security group for DuckTickets RDS",
            "egress": [],
            "id": "sg-07168fa93ae7ed84a",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a455cb2ded70807a"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "ducktickets-rds-hml-20250818121104393300000004",
            "name_prefix": "ducktickets-rds-hml-",
            "owner_id": "243429551092",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ducktickets-rds-hml-sg"
            },
            "tags_all": {
              "Name": "ducktickets-rds-hml-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-09cc347e23e147f00"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ec2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:243429551092:subnet/subnet-0a3a244e41b1aa1ba",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a3a244e41b1aa1ba",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "243429551092",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ducktickets-private-a-hml"
            },
            "tags_all": {
              "Name": "ducktickets-private-a-hml"
            },
            "vpc_id": "vpc-09cc347e23e147f00"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:243429551092:subnet/subnet-053151c940b95182f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-053151c940b95182f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "243429551092",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ducktickets-private-b-hml"
            },
            "tags_all": {
              "Name": "ducktickets-private-b-hml"
            },
            "vpc_id": "vpc-09cc347e23e147f00"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:243429551092:subnet/subnet-03fd9f537e673ff65",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03fd9f537e673ff65",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "243429551092",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ducktickets-public-hml"
            },
            "tags_all": {
              "Name": "ducktickets-public-hml"
            },
            "vpc_id": "vpc-09cc347e23e147f00"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:243429551092:vpc/vpc-09cc347e23e147f00",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-019628ffc137aa30d",
            "default_route_table_id": "rtb-0c1ef72e0b05e4d2a",
            "default_security_group_id": "sg-06925b9ad6af3de27",
            "dhcp_options_id": "dopt-094ed2f3f5165e068",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09cc347e23e147f00",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c1ef72e0b05e4d2a",
            "owner_id": "243429551092",
            "tags": {
              "Name": "ducktickets-vpc-hml"
            },
            "tags_all": {
              "Name": "ducktickets-vpc-hml"
            }
          }
        }
      ]
    }
  ]
}